--- a/usuarios_notas/usuarios_notas/pom.xml
+++ b/usuarios_notas/usuarios_notas/pom.xml
@@ -55,6 +55,11 @@
 		<version>3.0.2</version>
 
 	</dependency>
+	<dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 	<dependency><!--dependencia para la validación de datos-->
 
         <groupId>org.projectlombok</groupId>
